[package]
name = "socks2http"
version = "0.1.0"
edition = "2021"
description = "Connect to HTTP proxy through SOCKS5 protocol with forwarding credentials"
authors = ["1zuna <1zuna@ccbluex.net>"]
license-file = "LICENSE"

[dependencies]
log = "0.4.0"
env_logger = "0.10.0"

tokio = { version = "1.34.0", features = ["full"] }

async-http-proxy = { version = "1.2.5", features = ["runtime-tokio", "basic-auth"]}
socks5-impl = { version = "0.5.6", features = ["tokio"] }

anyhow = "1.0"
as-any = "0.3.1"

async-trait = "0.1"